// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link> hook:styler 1`] = `
<Text
  accessibilityRole="link"
  href="http://minube.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      Array [
        Object {
          "marginBottom": 16,
        },
        undefined,
        false,
      ],
    ]
  }
/>
`;

exports[`<Link> renders 1`] = `
<Text
  accessibilityRole="link"
  href="http://minube.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      Array [
        undefined,
        false,
      ],
    ]
  }
/>
`;

exports[`<Link> when {style} 1`] = `
<Text
  accessibilityRole="link"
  href="http://minube.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      Array [
        Object {
          "fontSize": 20,
          "fontWeight": "700",
        },
        false,
      ],
    ]
  }
  visible={true}
/>
`;

exports[`<Link> when {styleHover} 1`] = `
<Text
  accessibilityRole="link"
  href="http://minube.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      Array [
        undefined,
        false,
      ],
    ]
  }
  styleHover={
    Object {
      "fontSize": 20,
      "fontWeight": "700",
    }
  }
  visible={true}
/>
`;
